# zndraw-auth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/plans/: 2026-02-03-fastapi-users-setup.md  2026-02-10-pure-di-architecture.md  2026-03-01-cli-auth-endpoints-design.md  2026-03-01-cli-auth-implementation.md
src/zndraw_auth/: __init__.py  cli_login.py  db.py  schemas.py  settings.py  users.py
tests/: conftest.py  test_auth.py  test_cli_login.py  test_scoped_session.py
